crates/test-files/fixtures/compile_errors/return_type_not_fixedsize.fe
contract C {
    pub fn f() -> Map<address, bool> {}
}
